--- a/_config.yml
+++ b/_config.yml
@@ -4,13 +4,13 @@ email: domoritz@cmu.edu
 description: > # this means to ignore newlines until "baseurl:"
   Research Scientist at Apple. To be assistant professor at Carnegie Mellon University. I create interactive data visualization and analysis tools. PhD from University of Washington.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://www.domoritz.de" # the base hostname & protocol for your site
-production_url: "https://www.domoritz.de"
-github_username: domoritz
+url: "https://crazyspike.github.io/linzhu/" # the base hostname & protocol for your site
+production_url: "https://crazyspike.github.io/linzhu/"
+github_username: crazyspike
 permalink: /blog/:year/:month/:title.html
 
 twitter:
-  username: domoritz
+  username:
 
 sass:
   style: compressed
