--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ collections:
     output: false
 
 jekyll-mentions:
-  base_url: https://twitter.com
+  base_url: https://crazyspike.github.io/linzhu/
 
 plugins:
   - jekyll-sitemap
