--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Dominik Moritz
 email: domoritz@cmu.edu
 description: > # this means to ignore newlines until "baseurl:"
   Research Scientist at Apple. To be assistant professor at Carnegie Mellon University. I create interactive data visualization and analysis tools. PhD from University of Washington.
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "https://crazyspike.github.io/linzhu/" # the subpath of your site, e.g. /blog
 url: "https://crazyspike.github.io/linzhu/" # the base hostname & protocol for your site
 production_url: "https://crazyspike.github.io/linzhu/"
 github_username: crazyspike
