--- a/_config.yml
+++ b/_config.yml
@@ -3,27 +3,9 @@ title: Dominik Moritz
 email: domoritz@cmu.edu
 description: > # this means to ignore newlines until "baseurl:"
   Research Scientist at Apple. To be assistant professor at Carnegie Mellon University. I create interactive data visualization and analysis tools. PhD from University of Washington.
-baseurl: "https://crazyspike.github.io/linzhu/" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://crazyspike.github.io/linzhu/" # the base hostname & protocol for your site
 production_url: "https://crazyspike.github.io/linzhu/"
 github_username: crazyspike
 permalink: /blog/:year/:month/:title.html
 
-twitter:
-  username:
-
-sass:
-  style: compressed
-
-collections:
-  publications:
-    output: false
-
-jekyll-mentions:
-  base_url: https://crazyspike.github.io/linzhu/
-
-plugins:
-  - jekyll-sitemap
-  - jekyll-feed
-  - jekyll-seo-tag
-  - jekyll-mentions
